# marketing-intelligence

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  deps.py  endpoints.py
backend/app/core/: async_database.py  config.py  database.py  security.py
backend/app/models/: __init__.py  models.py  user.py
backend/app/schemas/: schemas.py  user.py
backend/app/tasks/: worker.py
backend/migrations/: env.py
backend/migrations/versions/: 05d6a8f77faa_add_price_value_and_unit_to_news.py  4230e519dbdf_add_market_trends_table.py  5d1bd6be1472_add_published_at_to_market_trends.py  8f5a2436ed68_add_company_name_to_market_trends.py  b19a20bae1b4_initial_migration.py  d0c44be0508f_add_metric_type_to_market_trends.py  ec9705ae63c2_make_datetime_timezone_aware.py  ff570f34c6ac_add_published_at_to_news.py
backend/scripts/: check_news_dates.py  check_trends.py  clean_data.py  debug_analytics.py  debug_trends.py  fix_metric_types.py  sync_dates.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AdminSettings.tsx  NewsFeed.tsx
frontend/src/components/ui/: base-ui.tsx
frontend/src/lib/: api.ts
