[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "email-validator>=2.2.0",
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "openai>=2.15.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "simhash>=2.1.2",
    "sqlalchemy[asyncio]>=2.0.0",
    "trafilatura>=1.12.2",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.21",
]
